tests/semantic/invalid/30_e_child_before_parent.hulk
class Child() is Parent { }

class Parent() { }
